namespace AISEP.Models.Enums
{
    public enum UserRole
    {
        Startup,
        Investor,
        Advisor,
        Staff,
        Admin
    }
}
