@startuml
title Deal Flow - Class Diagram

skinparam monochrome true
skinparam shadowing false
hide empty members
hide circle

package "API Controllers" {
  class DealsController {
    -_dealService: IDealService
    -_userService: IUserService
    -_investorService: IInvestorService
    -_startupService: IStartupService
    +GetDeals(model)
    +GetDealById(id)
    +CreateDeal(dto)
    +VerifyDeal(id, dto)
    +StaffReviewDeal(id, dto)
    +ReuploadDealEvidence(id, dto)
    +VerifyOnChain(id)
  }
}

package "Deal Services" {
  interface IDealService {
    +CreateDealForInvestorAsync(investorId, dto)
    +CreateDealForStartupAsync(startupId, dto)
    +GetDealsAsync(sieveModel)
    +GetInvestorDealsAsync(investorId, sieveModel)
    +GetStartupDealsAsync(startupId, sieveModel)
    +VerifyDealForInvestorAsync(investorId, dealId, request)
    +VerifyDealForStartupAsync(startupId, dealId, request)
    +StaffReviewDealAsync(dealId, request)
    +ReuploadDealEvidenceForInvestorAsync(investorId, dealId, request)
    +ReuploadDealEvidenceForStartupAsync(startupId, dealId, request)
    +GetDealByIdAsync(dealId)
    +GetDealOnChainVerificationAsync(dealId)
  }

  class DealService {
    -_unitOfWork: IUnitOfWork
    -_notificationService: INotificationService
    -_mapper: IMapper
    -_blockchainOwnershipAssignmentQueue: IBlockchainOwnershipAssignmentQueue
    -_blockchainService: IBlockchainService
    -_storageService: IStorageService
    -_sieveProcessor: ISieveProcessor
    +CreateDealForInvestorAsync(investorId, dto)
    +CreateDealForStartupAsync(startupId, dto)
    +VerifyDealForInvestorAsync(investorId, dealId, request)
    +VerifyDealForStartupAsync(startupId, dealId, request)
    +StaffReviewDealAsync(dealId, request)
    +ReuploadDealEvidenceForInvestorAsync(investorId, dealId, request)
    +ReuploadDealEvidenceForStartupAsync(startupId, dealId, request)
    +GetDealOnChainVerificationAsync(dealId)
    -HandleCounterpartyVerificationAsync(deal, actorRole, isConfirmed, reason)
    -UploadEvidenceAsync(file, startupId)
    -NotifyProcessingBlockchainAsync(deal)
    -NotifyCounterpartyToVerifyAsync(deal)
  }
}

package "Supporting Services" {
  interface IStorageService {
    +UploadFileAsync(file, folder)
  }

  interface IBlockchainService {
    +RegisterDocumentAsync(fileHash, startupId)
    +AssignDocumentOwnerAsync(fileHash, investorWallet)
    +ComputeFileHashAsync(file)
    +ComputeFileHashFromUrlAsync(fileUrl)
    +VerifyDocumentAsync(fileHash)
    +VerifyProjectDocumentsAsync(projectId)
  }

  interface INotificationService {
    +SendNotificationAsync(userId, title, message, type, referenceId, referenceType)
    +GetUserNotificationsAsync(userId, model)
    +MarkAsReadAsync(notificationId, currentUserId)
    +MarkAllAsReadAsync(currentUserId)
    +DeleteNotificationAsync(notificationId, currentUserId)
  }

  interface INotificationRealtimePublisher {
    +PublishToUserAsync(userId, notification)
  }

  class NotificationService {
    -_unitOfWork: IUnitOfWork
    -_mapper: IMapper
    -_realtimePublisher: INotificationRealtimePublisher
    +SendNotificationAsync(userId, title, message, type, referenceId, referenceType)
  }

  class SignalRNotificationRealtimePublisher {
    -_hubContext: IHubContext<NotificationHub>
    +PublishToUserAsync(userId, notification)
  }

  class NotificationHub {
    +ClientMethodReceiveNotification: string
  }
}

package "Blockchain Background Services" {
  interface IBlockchainOwnershipAssignmentQueue {
    +QueueAsync(workItem, cancellationToken)
    +DequeueAsync(cancellationToken)
  }

  class BlockchainOwnershipAssignmentQueue {
    -_queue: Channel<DocumentOwnerAssignmentWorkItem>
    +QueueAsync(workItem, cancellationToken)
    +DequeueAsync(cancellationToken)
  }

  class BlockchainOwnershipAssignmentBackgroundService {
    -_queue: IBlockchainOwnershipAssignmentQueue
    -_scopeFactory: IServiceScopeFactory
    -_logger: ILogger<BlockchainOwnershipAssignmentBackgroundService>
    #ExecuteAsync(stoppingToken)
    -NotifyBlockchainSuccessAsync(notificationService, deal, txHash)
    -MarkBlockchainFailedAsync(unitOfWork, notificationService, deal, errorMessage)
  }

  class DocumentOwnerAssignmentWorkItem <<record>> {
    +DealId: int
  }
}

package "Data Access" {
  interface IUnitOfWork {
    +Deals: IDealRepository
    +Investors: IInvestorRepository
    +Startups: IStartupRepository
    +Projects: IProjectRepository
    +ConnectionRequests: IConnectionRequestRepository
    +Notifications: INotificationRepository
    +SaveChangesAsync()
  }

  interface IDealRepository {
    +GetQuery()
    +GetByIdAsync(dealId)
    +GetByIdWithDetailsAsync(dealId)
    +HasBlockingDealAsync(investorId, projectId)
    +AddAsync(deal)
    +Update(deal)
  }
}

package "DTOs" {
  class CreateDealDto {
    +ProjectId: int
    +InvestedAmount: decimal
    +Type: InvestmentType
    +EquityPercentage: decimal?
    +ExchangeTerms: string?
    +EvidenceFile: IFormFile
  }

  class VerifyDealRequestDto {
    +IsConfirmed: bool?
    +Reason: string?
  }

  class StaffReviewDealRequestDto {
    +IsApproved: bool?
    +Reason: string?
  }

  class ReuploadDealEvidenceDto {
    +EvidenceFile: IFormFile
  }

  class DealDto {
    +DealId: int
    +InvestorId: int
    +StartupId: int
    +ProjectId: int
    +InvestedAmount: decimal
    +Type: string
    +EquityPercentage: decimal?
    +ExchangeTerms: string?
    +Status: string
    +DocumentUrl: string?
    +DocumentHash: string?
    +BlockchainTxHash: string?
    +BlockchainVerifiedAt: DateTime?
    +BlockchainErrorMessage: string?
    +InitiatorRole: string
    +StartupConfirmed: bool
    +InvestorConfirmed: bool
    +IsCompleted: bool
    +CompletionDate: DateTime?
  }

  class DealBlockchainVerificationResponse {
    +DealId: int
    +DocumentHash: string
    +BlockchainTxHash: string?
    +InvestorWallet: string
    +StartupId: int
    +TimestampOnBlockchain: string?
    +Owners: IReadOnlyList<string>
    +IsVerified: bool
    +Message: string?
  }
}

package "Entities and Enums" {
  class Deal {
    +DealId: int
    +InvestorId: int
    +ProjectId: int
    +InvestedAmount: decimal
    +Type: InvestmentType
    +EquityPercentage: decimal?
    +ExchangeTerms: string?
    +StartupConfirmed: bool
    +InvestorConfirmed: bool
    +Status: DealStatus
    +DealDate: DateTime
    +DocumentUrl: string?
    +DocumentHash: string?
    +BlockchainTxHash: string?
    +BlockchainVerifiedAt: DateTime?
    +BlockchainErrorMessage: string?
    +InitiatorRole: UserRole
    +IsCompleted: bool
    +CompletionDate: DateTime?
  }

  class Investor {
    +InvestorId: int
    +UserId: int
    +WalletAddress: string?
    +ApprovalStatus: ApprovalStatus
  }

  class Startup {
    +StartupId: int
    +UserId: int
    +CompanyName: string?
    +ApprovalStatus: ApprovalStatus
  }

  class Project {
    +ProjectId: int
    +StartupId: int
    +ProjectName: string
    +Status: ProjectStatus
  }

  class ConnectionRequest {
    +ConnectionRequestId: int
    +InvestorId: int
    +ProjectId: int
    +Status: ConnectionRequestStatus
    +ResponseDate: DateTime?
  }

  enum DealStatus {
    PendingCounterpartyConfirmation
    PendingStaffApproval
    RequireReupload
    ProcessingBlockchain
    Completed
    Canceled
    BlockchainFailed
  }

  enum InvestmentType {
    Equity
    CustomTerms
  }

  enum UserRole {
    Startup
    Investor
    Advisor
    Staff
    Admin
  }
}

DealsController ..> IDealService
DealsController ..> CreateDealDto
DealsController ..> VerifyDealRequestDto
DealsController ..> StaffReviewDealRequestDto
DealsController ..> ReuploadDealEvidenceDto

DealService ..|> IDealService
DealService ..> IUnitOfWork
DealService ..> INotificationService
DealService ..> IStorageService
DealService ..> IBlockchainService
DealService ..> IBlockchainOwnershipAssignmentQueue
DealService ..> DocumentOwnerAssignmentWorkItem
DealService ..> DealDto
DealService ..> DealBlockchainVerificationResponse

NotificationService ..|> INotificationService
NotificationService ..> IUnitOfWork
NotificationService ..> INotificationRealtimePublisher
SignalRNotificationRealtimePublisher ..|> INotificationRealtimePublisher
SignalRNotificationRealtimePublisher ..> NotificationHub

BlockchainOwnershipAssignmentQueue ..|> IBlockchainOwnershipAssignmentQueue
BlockchainOwnershipAssignmentBackgroundService ..> IBlockchainOwnershipAssignmentQueue
BlockchainOwnershipAssignmentBackgroundService ..> IBlockchainService
BlockchainOwnershipAssignmentBackgroundService ..> INotificationService
BlockchainOwnershipAssignmentBackgroundService ..> IUnitOfWork

IUnitOfWork ..> IDealRepository
IDealRepository ..> Deal

Investor "1" o-- "0..*" Deal
Project "1" o-- "0..*" Deal
Startup "1" o-- "0..*" Project
Investor "1" o-- "0..*" ConnectionRequest
Project "1" o-- "0..*" ConnectionRequest

Deal --> DealStatus
Deal --> InvestmentType
Deal --> UserRole
CreateDealDto --> InvestmentType
DocumentOwnerAssignmentWorkItem --> Deal

@enduml
